# VirtualMachine

./: .gitignore  CMakeLists.txt  README.md  frame.c  frame.h  instruction.c  instruction.h  stack_frame.c  stack_frame.h  vm.c  vm.h
kernel/: Makefile  class.c  class.h  frame.c  frame.h  gc.c  gc.h  instruction.c  instruction.h  stack_frame.c  stack_frame.h
parsing-bytecode/: file.c  loader.c  loader.h  pars_element.c  pars_element.h  parser.c  string.c  string.h
parsing_bytecode/: file.c  loader.c  string.c  string.h
src/main/: vm.c  vm.h
src/main/compiler/bytecode/: pars_element.c  parser.h  parser_source.c
src/main/compiler/commons/: string.c  string.h
src/main/compiler/source/: parser_source.c  parser_source.h
src/main/kernel/: frame.h  gc.c  gc.h  instruction.c  instruction.h  stack_frame.c  stack_frame.h
src/main/parsing/bytecode/: file.h  pars_element.c  parser.c  parser.h
src/test/: test_compile_source.c  test_kernel.c  test_project.c  test_project.h
src/test/compile_source/: test_project_gc.fn  test_project_gc_tree_2.fn  test_project_mul.fn
src/test/project1/: config  test_project_add.fn
src/test/source/: test  test_project_add.fn  test_project_div_i.fn  test_project_loop.fn  test_project_mul.fn
test/: SumTest.fn  example.fn  test.h  test_kernel.c  test_kernel.h  test_parsing.c  test_parsing.h  test_project.c  test_project_add.fn  test_project_class.fn  test_project_compare_1.fn  test_project_compare_2.fn  test_project_div_i.fn  test_project_gc.fn  test_project_gc_tree_1.fn  test_project_invoke.fn  test_project_invoke_2.fn
vm/: ConstantPool.h  Frame.c  Frame.h  Instruction.c  Instruction.h  Loader.c  Loader.h  VM.c  VM.h  frame.c  frame.h  instruction.c  vm.c  vm.h
vm/parsing_bytecode/: File.c  File.h  Loader.c  Loader.h  String.c  file.c  file.h  loader.c  loader.h  string.c
